--- a/src/options/bootstrap.scss
+++ b/src/options/bootstrap.scss
@@ -1,9 +1,8 @@
-/*@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-
-@import "~bootstrap/scss/buttons";
+/*@import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/utilities";*/
 
-@import "~bootstrap/scss/bootstrap";
-@import "~jQuery-QueryBuilder/dist/scss/dark";
+@import '~jQuery-QueryBuilder/dist/scss/default';
+@import '~bootstrap/dist/css/bootstrap.css';
+@import '~bootstrap-select/dist/css/bootstrap-select.css';
+@import '~awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css';
+@import './query-builder.css';
